include/dss_capi.h

    /*! 
    Array of doubles: set the phase allocation factors for the active meter.
    */
    DSS_CAPI_DLL void Meters_Get_AllocFactors(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Meters_Get_AllocFactors but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Meters_Get_AllocFactors_GR(void);
    /*! 
    Array of doubles: set the phase allocation factors for the active meter.
    */
    DSS_CAPI_DLL void Meters_Set_AllocFactors(const double* ValuePtr, int32_t ValueCount);
    /*! 
    Set Name of metered element
    */
    DSS_CAPI_DLL const char* Meters_Get_MeteredElement(void);
    /*! 
    set Number of Metered Terminal
    */
    DSS_CAPI_DLL int32_t Meters_Get_MeteredTerminal(void);
    /*! 
    Set Name of metered element
    */
    DSS_CAPI_DLL void Meters_Set_MeteredElement(const char* Value);
    /*! 
    set Number of Metered Terminal
    */
    DSS_CAPI_DLL void Meters_Set_MeteredTerminal(int32_t Value);
    /*! 
    Global Flag in the DSS to indicate if Demand Interval (DI) files have been properly opened.
    */
    DSS_CAPI_DLL uint16_t Meters_Get_DIFilesAreOpen(void);
    DSS_CAPI_DLL void Meters_CloseAllDIFiles(void);
    DSS_CAPI_DLL void Meters_OpenAllDIFiles(void);
    DSS_CAPI_DLL void Meters_SampleAll(void);
    DSS_CAPI_DLL void Meters_SaveAll(void);
    /*! 
    Array of names of all zone end elements.
    */
    DSS_CAPI_DLL void Meters_Get_AllEndElements(char*** ResultPtr, int32_t* ResultDims);
    /*! 
    Number of zone end elements in the active meter zone.
    */
    DSS_CAPI_DLL int32_t Meters_Get_CountEndElements(void);
    /*! 
    Number of Energy Meters in the Active Circuit
    */
    DSS_CAPI_DLL int32_t Meters_Get_Count(void);
    /*! 
    Wide string list of all branches in zone of the active energymeter object.
    */
    DSS_CAPI_DLL void Meters_Get_AllBranchesInZone(char*** ResultPtr, int32_t* ResultDims);
    /*! 
    Number of branches in Active Energy Meter zone. (Same as sequence list size)
    */
    DSS_CAPI_DLL int32_t Meters_Get_CountBranches(void);
    /*! 
    Returns SAIFI for this meter's Zone. Execute Reliability Calc method first.
    */
    DSS_CAPI_DLL double Meters_Get_SAIFI(void);
    /*! 
    Get/set Index into Meter's SequenceList that contains branch pointers in lexical order. Earlier index guaranteed to be upline from later index. Sets PDelement active.
    */
    DSS_CAPI_DLL int32_t Meters_Get_SequenceIndex(void);
    /*! 
    Get/set Index into Meter's SequenceList that contains branch pointers in lexical order. Earlier index guaranteed to be upline from later index. Sets PDelement active.
    */
    DSS_CAPI_DLL void Meters_Set_SequenceIndex(int32_t Value);
    /*! 
    SAIFI based on kW rather than number of customers. Get after reliability calcs.
    */
    DSS_CAPI_DLL double Meters_Get_SAIFIKW(void);
    DSS_CAPI_DLL void Meters_DoReliabilityCalc(uint16_t AssumeRestoration);
    /*! 
    Size of Sequence List
    */
    DSS_CAPI_DLL int32_t Meters_Get_SeqListSize(void);
    /*! 
    Total Number of customers in this zone (downline from the EnergyMeter)
    */
    DSS_CAPI_DLL int32_t Meters_Get_TotalCustomers(void);
    /*! 
    SAIDI for this meter's zone. Execute DoReliabilityCalc first.
    */
    DSS_CAPI_DLL double Meters_Get_SAIDI(void);
    /*! 
    Total customer interruptions for this Meter zone based on reliability calcs.
    */
    DSS_CAPI_DLL double Meters_Get_CustInterrupts(void);
    /*! 
    Number of feeder sections in this meter's zone
    */
    DSS_CAPI_DLL int32_t Meters_Get_NumSections(void);
    DSS_CAPI_DLL void Meters_SetActiveSection(int32_t SectIdx);
    /*! 
    Average Repair time in this section of the meter zone
    */
    DSS_CAPI_DLL double Meters_Get_AvgRepairTime(void);
    /*! 
    Sum of Fault Rate time Repair Hrs in this section of the meter zone
    */
    DSS_CAPI_DLL double Meters_Get_FaultRateXRepairHrs(void);
    /*! 
    Number of branches (lines) in this section
    */
    DSS_CAPI_DLL int32_t Meters_Get_NumSectionBranches(void);