src/CAPI/CAPI_Meters.pas


    DSS_RecreateArray_PDouble(ResultPtr, ResultCount, pMeterObj.NPhases);
    Move(pMeterObj.PhsAllocationFactor[1], ResultPtr^, ResultCount^ * SizeOf(Double));
end;

procedure Meters_Get_AllocFactors_GR(); CDECL;
// Same as Meters_Get_AllocFactors but uses global result (GR) pointers
begin
    Meters_Get_AllocFactors(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
procedure Meters_Set_AllocFactors(ValuePtr: PDouble; ValueCount: TAPISize); CDECL;
var
    Value: PDoubleArray;
    pMeterObj: TEnergyMeterObj;
    i: Integer;
begin
    if not _activeObj(pMeterObj) then
        Exit;

    Value := PDoubleArray(ValuePtr);
    if ValueCount <> pMeterObj.NPhases then
    begin
        DoSimpleMsg('The provided number of values does not match the element''s number of phases.', 5026);
        Exit;
    end;

    for i := 1 to pMeterObj.NPhases do
    begin
        pMeterObj.PhsAllocationFactor^[i] := Value[i - 1];
    end;
end;
//------------------------------------------------------------------------------
function Meters_Get_MeteredElement(): PAnsiChar; CDECL;
var
    pMeterObj: TEnergyMeterObj;
begin
    Result := NIL;
    if not _activeObj(pMeterObj) then
        Exit;

    Result := DSS_GetAsPAnsiChar(pMeterObj.ElementName);
end;
//------------------------------------------------------------------------------
function Meters_Get_MeteredTerminal(): Integer; CDECL;
var
    pMeterObj: TEnergyMeterObj;
begin
    Result := 0;
    if not _activeObj(pMeterObj) then
        Exit;

    Result := pMeterObj.MeteredTerminal;
end;
//------------------------------------------------------------------------------
procedure Meters_Set_MeteredElement(const Value: PAnsiChar); CDECL;
var
    pMeterObj: TEnergyMeterObj;
begin
    if not _activeObj(pMeterObj) then
        Exit;

    pMeterObj.elementName := Value;
    pMeterObj.MeteredElementChanged := TRUE;
    pMeterObj.RecalcElementData;
end;
//------------------------------------------------------------------------------
procedure Meters_Set_MeteredTerminal(Value: Integer); CDECL;
var
    pMeterObj: TEnergyMeterObj;
begin
    if not _activeObj(pMeterObj) then
        Exit;

    pMeterObj.MeteredTerminal := Value;
    pMeterObj.MeteredElementChanged := TRUE;
    pMeterObj.RecalcElementData;
end;
//------------------------------------------------------------------------------
function Meters_Get_DIFilesAreOpen(): Boolean; CDECL;
begin
    Result := False;
    if InvalidCircuit then
        Exit;
    Result := DIFilesAreOpen;    // Global variable
end;
//------------------------------------------------------------------------------
procedure Meters_CloseAllDIFiles(); CDECL;
begin
    if InvalidCircuit then
        Exit;
    EnergyMeterClass.CloseAllDIFiles;
end;
//------------------------------------------------------------------------------
procedure Meters_OpenAllDIFiles(); CDECL;
begin
    if InvalidCircuit then
        Exit;
    EnergyMeterClass.OpenAllDIFiles;
end;
//------------------------------------------------------------------------------
procedure Meters_SampleAll(); CDECL;
begin
    if InvalidCircuit then
        Exit;
    EnergyMeterClass.SampleAll;
end;
//------------------------------------------------------------------------------
procedure Meters_SaveAll(); CDECL;
begin
    if InvalidCircuit then
        Exit;
    EnergyMeterClass.SaveAll;
end;
//------------------------------------------------------------------------------
procedure Meters_Get_AllEndElements(var ResultPtr: PPAnsiChar; ResultCount: PAPISize); CDECL;
var
    Result: PPAnsiCharArray;
    pMeterObj: TEnergyMeterObj;
    k, num: Integer;
    elem: TDSSCktElement;
    node: TCktTreeNode;
begin
    DefaultResult(ResultPtr, ResultCount, '');
    if not _activeObj(pMeterObj) then
        Exit;

    if not pMeterObj.CheckBranchList(5502) then
        Exit;
    
    if pMeterObj.BranchList.ZoneEndsList = NIL then
        Exit;

    num := pMeterObj.BranchList.ZoneEndsList.NumEnds;
    DSS_RecreateArray_PPAnsiChar(Result, ResultPtr, ResultCount, num);
    for k := 0 to num - 1 do
    begin
        pMeterObj.BranchList.ZoneEndsList.Get(k + 1, node);
        elem := node.CktObject;
        Result[k] := DSS_CopyStringAsPChar(Format('%s.%s', [elem.ParentClass.Name, elem.Name]));
    end;
end;
//------------------------------------------------------------------------------
function Meters_Get_CountEndElements(): Integer; CDECL;
var
    pMeterObj: TEnergyMeterObj;
begin
    Result := 0;
    if not _activeObj(pMeterObj) then
        Exit;
    
    if not pMeterObj.CheckBranchList(5500) then
        Exit;

    if pMeterObj.BranchList.ZoneEndsList = NIL then
        Exit;

    Result := pMeterObj.BranchList.ZoneEndsList.NumEnds;
end;
//------------------------------------------------------------------------------
function Meters_Get_Count(): Integer; CDECL;
begin
    Result := 0;
    if InvalidCircuit then
        Exit;
    Result := ActiveCircuit.EnergyMeters.ListSize;
end;
//------------------------------------------------------------------------------
procedure Meters_Get_AllBranchesInZone(var ResultPtr: PPAnsiChar; ResultCount: PAPISize); CDECL;
var
    Result: PPAnsiCharArray;
    pMeterObj: TEnergyMeterObj;
    k: Integer;
    BranchCount: Integer;
    pElem: TDSSCktElement;
begin
    DefaultResult(ResultPtr, ResultCount, '');
    if not _activeObj(pMeterObj) then
        Exit;

    if not pMeterObj.CheckBranchList(5501) then
        Exit;

    // Get count of branches
    BranchCount := Meters_Get_CountBranches;
    if BranchCount <= 0 then 
        Exit;
        
    DSS_RecreateArray_PPAnsiChar(Result, ResultPtr, ResultCount, BranchCount);
    pElem := pMeterObj.BranchList.First;
    k := 0;
    while pElem <> NIL do
    begin
        Result[k] := DSS_CopyStringAsPChar(Format('%s.%s', [pElem.ParentClass.Name, pElem.Name]));
        inc(k);
        pElem := pMeterObj.BranchList.GoForward;
    end;
end;
//------------------------------------------------------------------------------
function Meters_Get_CountBranches(): Integer; CDECL; //TODO: check -- same as Meters_Get_SeqListSize?
var
    pMeterObj: TEnergyMeterObj;
  // pelem : TDSSCktElement;
begin
    Result := 0;
    if not _activeObj(pMeterObj) then
        Exit;
        
    if pMeterObj.SequenceList = NIL then
        Exit;
        
    Result := pMeterObj.SequenceList.ListSize;
    (*
      while pElem <> Nil do   
      Begin
         inc(Result);
         pElem := pMeterObj.BranchList.GoForward;
      End;
    *)
end;
//------------------------------------------------------------------------------
function Meters_Get_SAIFI(): Double; CDECL;
var
    pMeterObj: TEnergyMeterObj;
begin
    Result := 0.0;
    if not _activeObj(pMeterObj) then
        Exit;

    Result := pMeterObj.SAIFI;
end;
//------------------------------------------------------------------------------
function Meters_Get_SequenceIndex(): Integer; CDECL;
var
    pMeterObj: TEnergyMeterObj;
begin
    Result := 0;
    if not _activeObj(pMeterObj) then
        Exit;

    Result := pMeterObj.SequenceList.ActiveIndex;
end;
//------------------------------------------------------------------------------
procedure Meters_Set_SequenceIndex(Value: Integer); CDECL;
var
    pMeterObj: TEnergyMeterObj;
begin
    if not _activeObj(pMeterObj) then
        Exit;

    with pMeterObj do
    begin
        if (Value > 0) and (Value <= SequenceList.ListSize) then
            ActiveCircuit.ActiveCktElement := SequenceList.Get(Value)
        else
            DoSimpleMsg(Format('Invalid index for SequenceList: %d. List size is %d.', [Value, SequenceList.ListSize]), 500501);
    end;
end;
//------------------------------------------------------------------------------
function Meters_Get_SAIFIKW(): Double; CDECL;
var
    pMeterObj: TEnergyMeterObj;
begin
    Result := 0.0;
    if not _activeObj(pMeterObj) then
        Exit;

    Result := pMeterObj.SAIFIkW;
end;
//------------------------------------------------------------------------------
procedure Meters_DoReliabilityCalc(AssumeRestoration: Boolean); CDECL;
var
    pMeterObj: TEnergyMeterObj;
begin
    if not _activeObj(pMeterObj) then
        Exit;
        
    pMeterObj.CalcReliabilityIndices(AssumeRestoration);
end;
//------------------------------------------------------------------------------
function Meters_Get_SeqListSize(): Integer; CDECL;
var
    pMeterObj: TEnergyMeterObj;
begin
    Result := 0;
    if not _activeObj(pMeterObj) then
        Exit;
        
    Result := pMeterObj.SequenceList.ListSize;
end;
//------------------------------------------------------------------------------
function Meters_Get_TotalCustomers(): Integer; CDECL;
var
    pMeterObj: TEnergyMeterObj;
    PD_Element: TPDElement;

begin
    Result := 0;
    if not _activeObj(pMeterObj) then
        Exit;

    with ActiveCircuit do
    begin
        if Buses = NIL then 
            Exit;
    
        pMeterObj := TEnergyMeterObj(EnergyMeters.Active);
        if pMeterObj = NIL then
            Exit;
        
        PD_Element := pMeterObj.SequenceList.Get(1);
        if PD_Element = NIL then
            Exit;
            
        with PD_Element do
            Result := Buses^[Terminals[FromTerminal - 1].BusRef].BusTotalNumCustomers;
    end;
end;
//------------------------------------------------------------------------------
function Meters_Get_SAIDI(): Double; CDECL;
var
    pMeterObj: TEnergyMeterObj;
begin
    Result := 0.0;
    if not _activeObj(pMeterObj) then
        Exit;
    
    Result := pMeterObj.SAIDI;
end;
//------------------------------------------------------------------------------
function Meters_Get_CustInterrupts(): Double; CDECL;
var
    pMeterObj: TEnergyMeterObj;
begin
    Result := 0.0;
    if not _activeObj(pMeterObj) then
        Exit;

    Result := pMeterObj.CustInterrupts;
end;
//------------------------------------------------------------------------------
function Meters_Get_NumSections(): Integer; CDECL;
var
    pMeterObj: TEnergyMeterObj;
begin
    Result := 0;
    if not _activeObj(pMeterObj) then
        Exit;

    Result := pMeterObj.SectionCount;
end;
//------------------------------------------------------------------------------
procedure Meters_SetActiveSection(SectIdx: Integer); CDECL;
var
    pMeterObj: TEnergyMeterObj;
begin
    if not _activeObj(pMeterObj) then
        Exit;

    if (SectIdx > 0) and (SectIdx <= pMeterObj.SectionCount) then
        pMeterObj.ActiveSection := SectIdx
    else
        pMeterObj.ActiveSection := 0;
end;
//------------------------------------------------------------------------------
function Meters_Get_AvgRepairTime(): Double; CDECL;
var
    pMeterObj: TEnergyMeterObj;
begin
    Result := 0.0;
    if not _activeObj(pMeterObj) then
        Exit;

    with pMeterObj do
    begin
        if (ActiveSection > 0) and (ActiveSection <= SectionCount) then
            Result := FeederSections^[ActiveSection].AverageRepairTime
        else
            InvalidActiveSection();
    end;
end;
//------------------------------------------------------------------------------
function Meters_Get_FaultRateXRepairHrs(): Double; CDECL;
var
    pMeterObj: TEnergyMeterObj;
begin
    Result := 0.0;
    if not _activeObj(pMeterObj) then
        Exit;

    with pMeterObj do
    begin
        if (ActiveSection > 0) and (ActiveSection <= SectionCount) then
            Result := FeederSections^[ActiveSection].SumFltRatesXRepairHrs
        else
            InvalidActiveSection();
    end;
end;
//------------------------------------------------------------------------------
function Meters_Get_NumSectionBranches(): Integer; CDECL;
var
    pMeterObj: TEnergyMeterObj;
begin
    Result := 0;
    if not _activeObj(pMeterObj) then
        Exit;
